MathML: Use large operators and fix alignment in "math" blocks.
Set displaystyle="true"  and class="align" for the outer ``<mtable>``¹
in math blocks.

¹ The "mtable"-wrapper is used to support multi-line formulas
  similar to the "align" environment in the "amsmath" LaTeX package.

Add CSS to left-align the table cells in "align"-emulating mtables.

Fixes part of bug #407.

git-svn-id: svn://svn.code.sf.net/p/docutils/code/trunk@8738 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/plain.css
+++ b/docutils/docutils/writers/html5_polyglot/plain.css
@@ -59,6 +59,7 @@ hr.docutils {
 p, ol, ul, dl, li,
 div.line-block,
 div.topic,
+div > math,
 table {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
@@ -260,7 +261,10 @@ pre.code .deleted, code .deleted { background-color: #DEB0A1}
 pre.code .inserted, code .inserted { background-color: #A3D289}
 
 /* Math */
-/* styled separately (see math.css for math-output=HTML) */
+/* for math-output=MathML (for math-output=HTML, see math.css) */
+mtable.align > mtr > mtd { /* emulate AMS "align" environment. */
+  text-align: left;   
+}
 
 /* Epigraph           */
 /* Highlights         */
